--- a/gettext-tools/examples/hello-c-gnome3/hello2.ui
+++ b/gettext-tools/examples/hello-c-gnome3/hello2.ui
@@ -2,7 +2,7 @@
 <!-- This file is in the public domain. -->
 <interface>
   <!-- interface-requires gtk+ 3.10 -->
-  <object class="GtkApplicationWindow" id="main_window">
+  <template class="HelloApplicationWindow" parent="GtkApplicationWindow">
     <property name="title" translatable="yes">Example Application</property>
     <property name="default-width">600</property>
     <property name="default-height">400</property>
@@ -42,5 +42,5 @@
         </child>
       </object>
     </child>
-  </object>
+  </template>
 </interface>
